--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,7 @@ p {
 }
 
 body {
+  overflow-x: hidden;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -113,6 +114,7 @@ body {
   text-align: center;
   background-color: var(--clr-sky-blue);
 }
+
 .container {
   display: flex;
   flex-direction: column;
@@ -136,12 +138,11 @@ body {
 }
 .swap-rate-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   margin: 1rem 2rem;
 }
 .rate {
-  font-size: 10px;
+  font-size: 3rem;
   padding: 0 10px;
 }
 .swap {
@@ -157,7 +158,6 @@ body {
 
   .swap-rate-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     position: relative;
     left: 30%;
@@ -168,7 +168,7 @@ body {
     padding: 5px 10px;
   }
   .rate {
-    font-size: 10px;
+    font-size: 2rem;
     padding: 0 10px;
   }
 }
